# expt-rust

./: Cargo.toml
benches/: benchmark.rs
chapter_2/src/: lib.rs
chapter_3/src/: lib.rs
chapter_4/: Cargo.toml
clr/01_hello/: Cargo.toml  README.md
clr/01_hello/tests/: cli.rs
clr/02_echor/: Cargo.toml  README.md
clr/02_echor/src/: main.rs
clr/02_echor/tests/: cli.rs
clr/03_catr/: Cargo.toml  README.md  mk-outs.sh
clr/03_catr/src/: lib.rs
clr/03_catr/tests/: cli.rs
clr/03_catr/tests/expected/: all.b.out  all.n.out  all.out  spiders.txt.b.out  spiders.txt.out  the-bustle.txt.b.out  the-bustle.txt.n.stdin.out  the-bustle.txt.stdin.out
clr/04_headr/: Cargo.toml  README.md
clr/04_headr/src/: lib.rs
clr/04_headr/tests/: cli.rs
clr/05_wcr/: Cargo.toml  README.md
clr/05_wcr/src/: lib.rs
clr/05_wcr/tests/: cli.rs
src/: main.rs
zero/: Cargo.toml
zero/ch2/src/: main.rs
zero/ch3/src/: main.rs
zero/ch4/: Cargo.toml  test.yaml
zero/ch4/src/: main.rs
zero/ch5/: Cargo.toml
zero/ch5/my_lib/: Cargo.toml
zero/ch5/my_lib/src/: lib.rs
zero/ch5/my_lib/tests/: test_rand_even.rs
zero/ch5/src/: main.rs
zero/ch6/regex/: Cargo.toml  sample.txt
zero/ch6/regex/src/: engine.rs  helper.rs  lib.rs  main.rs
zero/ch6/regex/src/engine/: codegen.rs  evaluator.rs  parser.rs
zero/src/: ch2.rs  ch3.rs  ch4.rs  ch5.rs  ch6.rs  lib.rs
zero/src/ch6/: engine.rs
zero/src/ch6/engine/: codegen.rs  evaluator.rs  parser.rs
zero/tests/: test_rand_even.rs
