workspace = { members = ["zero"] }
[package]
name = "expt-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zero = { path = "./zero" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false